--- a/grawerowanie.html
+++ b/grawerowanie.html
@@ -4,7 +4,7 @@
     <title>Grawerowanie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="b/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css?%a=6%">
+    <link rel="stylesheet" href="css/main.css">
     <script defer src="js/menu.js"></script>
 </head>
 <!- nagłówek ->
